k8s/argocd/ingress-controller-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller-argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-server
    spec:
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
          args:
            - /nginx-ingress-controller
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
